# essay-markings

./: .env.example  .gitignore  AGENTs.md  LICENSE  Makefile  QUICKSTART.md  README.md  pyproject.toml
TODOs/: British-American-English.md  FRD.md  PTE-Academy-Essay-Marking-criteria.md  Pearson-PTE-rubrics.md  create-update-docs.md  export-essay-report-md-pdf.md  improve-feedback.md  refs.md  result-details.md  update-result-details.md  words-dict.md
backend/: __init__.py  main.py  requirements.txt
backend/core/: __init__.py  config.py  prompt_builder.py  schemas.py
backend/services/: __init__.py  deterministic_scorer.py  hybrid_grader.py  llm_service.py
data/: _tmp_lmstudio_payload.json  expected_outputs.json  sample_essays.json  sample_questions.json  words.SOURCE.md  words.txt
docs/: api_specs.md  architecture.md  calibration.md  configuration.md  feedback_style.md  limitations.md  pte_essay_rubric.md  report_exports.md  scoring.md  spelling_policy.md  testing.md
docs/agents/: calibration.md  coding_style.md  documentation.md  feedback.md  report_exports.md  secure_coding.md  spelling_policy.md  testing.md  ui_ux_interaction_design.md
frontend/: app.py
frontend/assets/: report-export.css  styles.css
scripts/: verify_sample_ranges.py
