[project]
name = "pte-essay-marker"
version = "0.1.0"
description = "PTE Academic Essay Grading System with a Streamlit frontend and FastAPI backend"
readme = "README.md"
requires-python = ">=3.12.2"
dependencies = [
    "streamlit==1.33.0",
    "fastapi==0.110.1",
    "uvicorn==0.29.0",
    "openai==1.16.2",
    "pydantic==2.6.4",
    "python-dotenv==1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
