[project]
name = "pte-essay-marker"
version = "0.1.0"
description = "PTE Academic Essay Grading System with a Streamlit frontend and FastAPI backend"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "streamlit==1.54.0",
    "fastapi==0.110.1",
    "uvicorn==0.29.0",
    "openai==1.16.2",
    "pydantic==2.12.5",
    "python-dotenv==1.0.1",
    "python-docx==1.1.2",
    "reportlab==4.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
